[project]
name = "advance-lang-chain-techniques"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "duckduckgo-search>=7.3.2",
    "langchain>=0.3.18",
    "langchain-community>=0.3.17",
    "langchain-openai>=0.3.5",
    "python-dotenv>=1.0.1",
]
